ansible/roles/gcloud/app_manager/files/manifests/frontend-auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: boutique-frontend-allow
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: frontend
  action: ALLOW
  rules:
  - {}  # Empty rule matches all traffic
