ansible/roles/gcloud/app_manager/files/manifests/global-auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-permissive-policy
  namespace: istio-system
spec:
  action: ALLOW
  rules:
  - {}
